test/valid/60294_factorial/factorial.mag
-- Author: 60294, Pedro Rosa
fun fact(n): Int -> Int =
    if n == 0 then 1 else n * fact(n - 1)

fun main(_): Unit -> Unit = 
    print(fact(4))