test/invalid-semantics/54483_no_main/no_main.mag
-- Author: 54483, Pedro Barata

-- Semantic error: program has no 'main' function

fun square (n) : Int -> Int = n * n
